--- a/layouts/book/single.html
+++ b/layouts/book/single.html
@@ -1,19 +1,10 @@
 {{ define "main" }}
 <div class="main-container">
   <h1>{{ .Title }}</h1>
+  {{ if .Page.Params.subtitle }}
   <h2>{{ .Page.Params.subtitle }}</h2>
+  {{ end }}
   <div class="centered">
-    <!-- <div class="book-metadata-tile">
-      <div class="book-img-container">
-        <div class="book-img">
-          {{ with .Resources.GetMatch .Params.image }}
-          <img src="{{ .RelPermalink }}" alt="">
-          {{ else }}
-          <p>No image found for {{ .Title }}</p>
-          {{ end }}
-        </div>
-      </div>
-    </div> -->
   </div>
   <p class="page-summary">{{ .Page.Params.summary }}</p>
   {{ .Content }}
