--- a/layouts/shortcodes/metadata.html
+++ b/layouts/shortcodes/metadata.html
@@ -37,14 +37,7 @@
 {{ end }}
 
 <div class="metadata-line">
-  {{ with .Page.Date }}
-    <div class="metadata-entry">
-      <div class="icon">
-        <img class="no-overlay" src='{{ "icons/calendar-solid.svg" | absURL }}' alt="Calendar-Date">
-      </div>
-      <p>{{ .Format "02.01.2006" }}</p>
-    </div>
-  {{ end }}
+  
   {{ with $gitinfo }}
     <div class="metadata-entry">
       <div class="icon">
@@ -52,10 +45,10 @@
       </div>
       <p>{{ .AuthorDate.Format "02.01.2006" }}</p>
     </div>
-  {{ else with .Page.Lastmod }}
+  {{ else with .Page.Date }}
     <div class="metadata-entry">
       <div class="icon">
-        <img class="no-overlay" src='{{ "icons/pencil-solid.svg" | absURL }}' alt="Last-Modified">
+        <img class="no-overlay" src='{{ "icons/calendar-solid.svg" | absURL }}' alt="Last-Modified">
       </div>
       <p>{{ . | time.Format "02.01.2006" }}</p>
     </div>
